# WEB_HW_8

./: README.md  pyproject.toml
hw_first_part/: cache.py  connect.py  main.py  models.py  seeds.py
hw_first_part/src/mongoeng/: quotes.json
hw_second_part/: connect.py  consumer.py  consumer_email.py  consumer_sms.py  models.py  producer.py
