[tool.poetry]
name = "web-hw-8"
version = "0.1.0"
description = ""
authors = ["Viacheslav Artemenko <v.a.artemenko1990@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
redis = "^5.0.1"
redis-lru = "^0.1.2"
pymongo = "^4.6.0"
mongoengine = "^0.27.0"
pika = "^1.3.2"
faker = "^20.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
